--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "react": "~16.13.0",
     "react-dom": "~16.13.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
+    "react-native-image-slider": "^2.0.3",
+    "react-native-svg": "12.1.0",
     "react-native-web": "0.13.13"
   },
   "devDependencies": {
-    "@babel/core": "7.9.0"
+    "@babel/core": "7.9.0",
+    "react-native-svg-transformer": "^0.14.3"
   },
   "scripts": {
     "start": "expo start",
